--- a/package.json
+++ b/package.json
@@ -8,18 +8,22 @@
     "dev": "run-p \"dev:*\"",
     "dev:css": "npm run generate:css -- --watch",
     "dev:remix": "remix dev",
-    "generate:css": "npx tailwindcss -o ./app/tailwind.css",
+    "generate:css": "npx tailwindcss -i ./app/styles/tailwind.css -o ./app/tailwind.css",
     "typecheck": "tsc"
   },
   "dependencies": {
     "@remix-run/node": "^1.11.1",
     "@remix-run/react": "^1.11.1",
     "@remix-run/vercel": "^1.11.1",
-    "@vercel/node": "^2.6.2",
-    "framer-motion": "^8.5.3",
+    "@vercel/node": "^2.8.16",
+    "daisyui": "^2.49.0",
+    "framer-motion": "^8.5.4",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-element-to-jsx-string": "^15.0.0"
+    "react-element-to-jsx-string": "^15.0.0",
+    "react-icons": "^4.7.1",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.11.1",
@@ -27,12 +31,14 @@
     "@remix-run/serve": "^1.11.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
-    "eslint": "^8.27.0",
+    "@types/prismjs": "^1.26.0",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@types/react-syntax-highlighter": "^15.5.6",
+    "eslint": "^8.32.0",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.4"
   },
   "engines": {
     "node": ">=14"
