--- a/package.json
+++ b/package.json
@@ -2,14 +2,10 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "run-s \"build:*\"",
-    "build:css": "npm run generate:css -- --minify",
-    "build:remix": "remix build",
-    "dev": "run-p \"dev:*\"",
-    "dev:css": "npm run generate:css -- --watch",
-    "dev:remix": "remix dev",
-    "generate:css": "npx tailwindcss -i ./app/styles/tailwind.css -o ./app/tailwind.css",
-    "typecheck": "tsc"
+    "build": "npm run build:css && remix build",
+    "build:css": "tailwindcss -m -i app/styles/app.css -o app/tailwind.css",
+    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
+    "dev:css": "tailwindcss -w -i app/styles/app.css -o app/tailwind.css"
   },
   "dependencies": {
     "@remix-run/node": "^1.11.1",
@@ -35,8 +31,8 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-syntax-highlighter": "^15.5.6",
+    "concurrently": "^7.6.0",
     "eslint": "^8.32.0",
-    "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
   },
