--- a/package.json
+++ b/package.json
@@ -2,39 +2,38 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "npm run build:css && remix build",
-    "build:css": "tailwindcss -m -i app/styles/app.css -o app/tailwind.css",
-    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "dev:css": "tailwindcss -w -i app/styles/app.css -o app/tailwind.css"
+    "build": "remix build",
+    "dev": "remix dev"
   },
   "dependencies": {
-    "@remix-run/node": "^1.11.1",
-    "@remix-run/react": "^1.11.1",
-    "@remix-run/vercel": "^1.11.1",
-    "@vercel/node": "^2.8.16",
-    "daisyui": "^2.49.0",
-    "framer-motion": "^8.5.4",
+    "@remix-run/node": "^1.15.0",
+    "@remix-run/react": "^1.15.0",
+    "@remix-run/vercel": "^1.15.0",
+    "@vercel/node": "^2.14.0",
+    "daisyui": "^2.51.6",
+    "framer-motion": "^10.12.4",
+    "lodash-es": "^4.17.21",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-element-to-jsx-string": "^15.0.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.8.0",
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.11.1",
-    "@remix-run/eslint-config": "^1.11.1",
-    "@remix-run/serve": "^1.11.1",
+    "@remix-run/dev": "^1.15.0",
+    "@remix-run/eslint-config": "^1.15.0",
+    "@remix-run/serve": "^1.15.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/lodash-es": "^4.17.7",
     "@types/prismjs": "^1.26.0",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
     "@types/react-syntax-highlighter": "^15.5.6",
-    "concurrently": "^7.6.0",
-    "eslint": "^8.32.0",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4"
+    "eslint": "^8.39.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">=14"
