--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "remix dev"
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.5.8",
     "@remix-run/node": "^1.16.0",
     "@remix-run/react": "^1.16.0",
     "@remix-run/vercel": "^1.16.0",
